binrw/tests/ui/invalid_assert_condition.stderr
error[E0308]: mismatched types
 --> $DIR/invalid_assert_condition.rs:5:13
  |
5 | #[br(assert("wrong type"))]
  |             ^^^^^^^^^^^^ expected `bool`, found `&str`
  |
note: return type inferred to be `bool` here
 --> $DIR/invalid_assert_condition.rs:4:10
  |
4 | #[derive(BinRead)]
  |          ^^^^^^^
